add colors, sizing, and font to message articles

--- a/lib/styles/friend-message.scss
+++ b/lib/styles/friend-message.scss
@@ -1,1 +1,11 @@
 $friend-box-color: #F2DDAB;
+
+.other-user-message {
+  background-color: #F2DDAB;
+  border-radius: 5px;
+}
+
+#friend {
+  border-bottom: 2px solid $primary-font-color;
+  margin-top: 0.4em;
+}
