--- a/lib/styles/page-body.scss
+++ b/lib/styles/page-body.scss
@@ -2,23 +2,63 @@ $primary-color: #517792;
 $secondary-color: #87644A;
 $primary-font-family: 'Hind Guntur', sans-serif;
 $secondary-font-family: 'Raleway', sans-serif;
-$primary-font-color: #FFF;
-$secondary-font-color: #87644A;
+$secondary-font-color: #FFF;
 $send-button-color: #849EBF;
 $edit-button-color: #41637D;
-$delete-button-color: #872A29;
 
 body {
   background-color: $primary-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
   border-bottom: 2px solid $secondary-color;
-  color: $primary-font-color;
-  padding-bottom: 0.3em;
+  color: $secondary-font-color;
+  font-family: $primary-font-family;
+  margin: 0;
+  padding-bottom: 0;
   text-align: center;
+  width: 100vw;
 }
 
-#user-chat-input {
+#show-all-messages {
+  background-color: #849EBF;
+  border: none;
+  border-radius: 5px;
+  color: $secondary-font-color;
+  margin-top: 0.6em;
+  padding: 5px 0 5px 0;
+  width: 26em;
+}
+
+form {
+  width: 18em;
+}
+
+textarea {
+  width: 20em;
   resize: none;
+}
+
+.user-message, .other-user-message {
+  margin-bottom: 0.8em;
+  width: 18em;
+}
+
+#send-button {
+  background-color: #849EBF;
+  border: none;
+  border-radius: 10px;
+  font-family: $primary-font-family;
+  // color: $secondary-font-color;
+  height: 50px;
+  width: 50px;
+}
+
+#text-counter, .counter {
+  color: $secondary-font-color;
+  font-family: $primary-font-family;
 }
