--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -1,5 +1,23 @@
 $user-box-color: #F2D18E;
+$primary-font-color: #87644A;
+$remove-button-color: #872A29;
 
-// .user-message {
-//   background-color: $user-box-color;
+.user-message {
+  background-color: #F2D18E;
+  border-radius: 5px;
+}
+
+.message-body, h3 {
+  color: $primary-font-color;
+  font-family: $primary-font-family;
+  padding: 0 5px 0 5px;
+}
+
+#user {
+  border-bottom: 2px solid $primary-font-color;
+  text-align: right;
+}
+
+// #remove-button {
+//
 // }
