--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -1,5 +1,4 @@
 $primary-font-color: #87644A;
-$remove-button-color: #872A29;
 
 .user-message {
   background-color: #F2D18E;
@@ -23,14 +22,25 @@ article button {
   border: none;
   background-color: transparent;
   height: 2em;
-  width: 2em;
   outline: none;
+  width: 2em;
 }
 
 .edit-button {
   background: url(/img/edit-button.svg) no-repeat;
+  margin-left: 0.5em;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .remove-button {
   background: url(/img/remove-button.svg) no-repeat;
+  float: right;
+  margin-right: 0.5em;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
