refactor all three phases

--- a/lib/styles/friend-message.scss
+++ b/lib/styles/friend-message.scss
@@ -1,5 +1,5 @@
 .other-user-message {
-  background-color: #F2DDAB;
+  background-color: #ebddbb;
   border-radius: 0.25em;
 }
 
@@ -7,4 +7,5 @@
   border-bottom: 1.8px solid $primary-font-color;
   font-family: $primary-font-family;
   margin: 0;
+  padding-bottom: 0;
 }
