--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -6,7 +6,7 @@ $primary-font-color: #87644A;
 }
 
 .message-body, h3 {
-  color: $primary-font-color;
+  color: #6e513b;
   font-family: $secondary-font-family;
   padding: 0.5em;
 }
@@ -15,12 +15,13 @@ $primary-font-color: #87644A;
   border-bottom: 1.8px solid $primary-font-color;
   font-family: $primary-font-family;
   margin: 0;
+  padding-bottom: 0;
   text-align: right;
 }
 
 article button {
-  border: none;
   background-color: transparent;
+  border: none;
   height: 2em;
   outline: none;
   width: 2em;
