fix links to image?

--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -28,7 +28,7 @@ article button {
 }
 
 .edit-button {
-  background: url(/img/edit-button.svg) no-repeat;
+  background: url(../../img/edit-button.svg) no-repeat;
   margin-left: 0.5em;
 
   &:hover {
@@ -37,7 +37,7 @@ article button {
 }
 
 .remove-button {
-  background: url(/img/remove-button.svg) no-repeat;
+  background: url(../../img/remove-button.svg) no-repeat;
   float: right;
   margin-right: 0.5em;
 
