--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -8,6 +8,7 @@ $primary-font-color: #87644A;
 .message-body, h3 {
   color: #6e513b;
   font-family: $secondary-font-family;
+  overflow-wrap: break-word;
   padding: 0.5em;
 }
 
@@ -28,7 +29,7 @@ article button {
 }
 
 .edit-button {
-  background: url(/img/edit-button.svg) no-repeat;
+  background: url(img/edit-button.svg) no-repeat;
   margin-left: 0.5em;
 
   &:hover {
@@ -37,7 +38,7 @@ article button {
 }
 
 .remove-button {
-  background: url(/img/remove-button.svg) no-repeat;
+  background: url(img/remove-button.svg) no-repeat;
   float: right;
   margin-right: 0.5em;
 
