--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -8,6 +8,7 @@ $primary-font-color: #87644A;
 .message-body, h3 {
   color: #6e513b;
   font-family: $secondary-font-family;
+  overflow-wrap: break-word;
   padding: 0.5em;
 }
 
