--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -1,7 +1,7 @@
 $primary-font-color: #87644A;
 
 .user-message {
-  background-color: #F2D18E;
+  background-color: #edc87d;
   border-radius: 0.3em;
 }
 
@@ -9,7 +9,7 @@ $primary-font-color: #87644A;
   color: #6e513b;
   font-family: $secondary-font-family;
   overflow-wrap: break-word;
-  padding: 0.5em;
+  padding: 1em;
 }
 
 #user {
@@ -30,7 +30,7 @@ article button {
 
 .edit-button {
   background: url(/img/edit-button.svg) no-repeat;
-  margin-left: 0.5em;
+  margin: 0 0 0.5em 1em;
 
   &:hover {
     cursor: pointer;
@@ -40,7 +40,7 @@ article button {
 .remove-button {
   background: url(/img/remove-button.svg) no-repeat;
   float: right;
-  margin-right: 0.5em;
+  margin: 0 1em 0.5em 0;
 
   &:hover {
     cursor: pointer;
