fix image paths

--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -29,7 +29,7 @@ article button {
 }
 
 .edit-button {
-  background: url(/img/edit-button.svg) no-repeat;
+  background: url(img/edit-button.svg) no-repeat;
   margin: 0 0 0.5em 1em;
 
   &:hover {
@@ -38,7 +38,7 @@ article button {
 }
 
 .remove-button {
-  background: url(/img/remove-button.svg) no-repeat;
+  background: url(img/remove-button.svg) no-repeat;
   float: right;
   margin: 0 1em 0.5em 0;
 
