--- a/lib/styles/user-message.scss
+++ b/lib/styles/user-message.scss
@@ -36,7 +36,7 @@ article button {
     cursor: pointer;
   }
 }
-
+//////////////////////////////////////////////
 .remove-button {
   background: url(/img/remove-button.svg) no-repeat;
   float: right;
